--- a/card-sort.html
+++ b/card-sort.html
@@ -187,7 +187,7 @@
       <div class="item">
         <div class="item-content">
           <div class="card">
-            <button class="btn-dup-card" alt="Duplicate this card">➕</button>
+            <button class="btn-dup-card" title="Duplicate this card">➕</button>
           </div>
         </div>
       </div>
@@ -221,6 +221,7 @@
       const cardTemplate = document.querySelector('.card-template');
       const categoryTemplate = document.querySelector('.category-template');
       const cardImageRegex = /\s*image\s*:\s*((?:https?:|data:|\.{0,2}\/)\S+)/i;
+      const editedCardRegex = /^--- (.*?) \+\+\+ (.*?)$/;
       const uncategorizedCardsGrid = new Muuri('.uncategorized-cards .grid', {
         dragEnabled: true,
         dragSort: () => cardGrids,
@@ -318,86 +319,99 @@
           buttonDuplicateCard.remove();
         }
         const hasImage = text.match(cardImageRegex);
+        const editedCard = text.match(editedCardRegex);
+        // si ça matche `--- *** +++ ***` c'est qu'on a un truc à traiter → regex.
+        if (editedCard) {
+          text = editedCard[2];
+          cardElement.setAttribute('data-original-text',editedCard[1]);
+        }
         if (hasImage) {
           const [textBefore, imageUrl, textAfter] = text.split(cardImageRegex);
-          const [textBeforeOriginal, imageUrlOriginal, textAfterOriginal] = text.split(cardImageRegex);
+          var originalOrText = cardElement.getAttribute('data-original-text') || text;
+          const [textBeforeOriginal, imageUrlOriginal, textAfterOriginal] = originalOrText.split(cardImageRegex);
           var textBeforeEditable = textBeforeOriginal;
-          const cardChildElements = document.createDocumentFragment();
+          const imageElement = document.createElement('img');
+          imageElement.className = 'card-image';
+          imageElement.onload = () => targetGrid.refreshItems().layout();
+          imageElement.src = imageUrl;
+          cardElement.appendChild(imageElement);
           if (textBefore.trim()) {
             const input = document.createElement('input');
             input.className = 'card-text';
             input.setAttribute("placeholder","Type a content");
             input.value = textBefore;
-            if (settings.allowCardEditing === false)
+            imageElement.insertAdjacentElement('beforebegin',input);
+            if (settings.allowCardEditing === false) {
               input.setAttribute("disabled","");
+            }
             input.addEventListener('input', function handleInput() {
               text = this.value + " image:" + imageUrlOriginal + textAfterOriginal;
               cardElement.setAttribute('data-text', text);
-              // Mes mods
-              const originalTextBefore = cardElement.querySelector('div.show-original.before') || document.createElement("div");
-              if (cardElement.getAttribute('data-text') == cardElement.getAttribute('data-original-text')) {
-                 if (originalTextBefore)
-                  originalTextBefore.remove();
-                  uncategorizedCardsGrid.refreshItems().layout();
-                  categoriesGrid.refreshItems().layout();
-              } else {
-                originalTextBefore.classList.add("show-original");
-                originalTextBefore.classList.add("before");
-                input.insertAdjacentElement('beforebegin', originalTextBefore);
-                originalTextBefore.innerHTML = textBeforeOriginal;
-                uncategorizedCardsGrid.refreshItems().layout();
-                categoriesGrid.refreshItems().layout();
-                textBeforeEditable = this.value;
-              }
-              // fin
               debouncedUpdateData();
             });
-            cardChildElements.appendChild(input);
+            const originalTextBefore = cardElement.querySelector('div.show-original.before') || document.createElement("div");
+            if (cardElement.getAttribute('data-text') == cardElement.getAttribute('data-original-text')) {
+                if (originalTextBefore) {
+                originalTextBefore.remove();
+              }
+              uncategorizedCardsGrid.refreshItems().layout();
+              categoriesGrid.refreshItems().layout();
+            } else {
+              originalTextBefore.classList.add("show-original");
+              originalTextBefore.classList.add("before");
+              originalTextBefore.innerHTML = textBeforeOriginal;
+              input.insertAdjacentElement('beforebegin',originalTextBefore);
+              uncategorizedCardsGrid.refreshItems().layout();
+              categoriesGrid.refreshItems().layout();
+              textBeforeEditable = input.value;
+            }
           }
-          const imageElement = document.createElement('img');
-          imageElement.className = 'card-image';
-          imageElement.onload = () => targetGrid.refreshItems().layout();
-          imageElement.src = imageUrl;
-          cardChildElements.appendChild(imageElement);
           if (textAfter.trim()) {
             const input = document.createElement('input');
             input.className = 'card-text';
             input.setAttribute("placeholder","Type a content");
             input.value = textAfter;
+            imageElement.insertAdjacentElement('afterend',input);
             if (settings.allowCardEditing === false)
               input.setAttribute("disabled","");
             input.addEventListener('input', function handleInput() {
               text = textBeforeEditable + " image:" + imageUrlOriginal + " " + this.value;
               cardElement.setAttribute('data-text', text);
-              //
-              const originalTextAfter = cardElement.querySelector('div.show-original.after') || document.createElement("div");
-              if (cardElement.getAttribute('data-text') == cardElement.getAttribute('data-original-text')) {
-                 if (originalTextAfter)
-                  originalTextAfter.remove();
-                  uncategorizedCardsGrid.refreshItems().layout();
-                  categoriesGrid.refreshItems().layout();
-              } else {
-                originalTextAfter.classList.add("show-original");
-                originalTextAfter.classList.add("after");
-                input.insertAdjacentElement('afterend', originalTextAfter);
-                originalTextAfter.innerHTML = textAfterOriginal;
-                uncategorizedCardsGrid.refreshItems().layout();
-                categoriesGrid.refreshItems().layout();
-              }
               debouncedUpdateData();
             });
-            cardChildElements.appendChild(input);
+            const originalTextAfter = cardElement.querySelector('div.show-original.after') || document.createElement("div");
+            if (cardElement.getAttribute('data-text') == cardElement.getAttribute('data-original-text')) {
+                if (originalTextAfter)
+                originalTextAfter.remove();
+                uncategorizedCardsGrid.refreshItems().layout();
+                categoriesGrid.refreshItems().layout();
+            } else {
+              originalTextAfter.classList.add("show-original");
+              originalTextAfter.classList.add("after");
+              input.insertAdjacentElement('afterend', originalTextAfter);
+              originalTextAfter.innerHTML = textAfterOriginal;
+              uncategorizedCardsGrid.refreshItems().layout();
+              categoriesGrid.refreshItems().layout();
+            }
           }
-          cardElement.appendChild(cardChildElements);
         }
         else {
           const input = document.createElement('input');
           input.className = 'card-text';
           input.setAttribute("placeholder","Type a content");
+          cardElement.appendChild(input);
+          if (editedCard) {
+            const oldText = document.createElement("div");
+            oldText.classList.add("show-original");
+            oldText.innerHTML = editedCard[1];
+            input.insertAdjacentElement('beforebegin', oldText);
+            uncategorizedCardsGrid.refreshItems().layout();
+            categoriesGrid.refreshItems().layout();
+          }
           input.value = text;
           if (settings.allowCardEditing === false)
             input.setAttribute("disabled","");
-          input.addEventListener('input', function handleInput() {
+            input.addEventListener('input', function handleInput() {
               text = this.value;
               cardElement.setAttribute('data-text', text);
               const originalText = cardElement.querySelector('div.show-original') || document.createElement("div");
@@ -415,10 +429,9 @@
               }
             debouncedUpdateData();
           });
-          cardElement.appendChild(input);
         }
         cardElement.setAttribute('data-text', text);
-        cardElement.setAttribute('data-original-text', text);
+        cardElement.setAttribute('data-original-text', cardElement.getAttribute('data-original-text') || text);
         targetGrid.show(
           targetGrid.add([itemElement], {
             active: false,
@@ -500,9 +513,9 @@
             if (cardElement.getAttribute('data-text') === cardElement.getAttribute('data-original-text')) {
               data[categoryName].push(cardElement.getAttribute('data-text'));
             } else {
-              data[categoryName].push("-" +
+              data[categoryName].push("--- " +
                               cardElement.getAttribute('data-original-text') +
-                              " +" +
+                              " +++ " +
                               cardElement.getAttribute('data-text')
                               );
             }
@@ -513,9 +526,9 @@
             if (cardElement.getAttribute('data-text') === cardElement.getAttribute('data-original-text')) {
               data[uncategorizedKey].push(cardElement.getAttribute('data-text'));
             } else {
-              data[uncategorizedKey].push("-" +
+              data[uncategorizedKey].push("--- " +
                               cardElement.getAttribute('data-original-text') +
-                              " +" +
+                              " +++ " +
                               cardElement.getAttribute('data-text')
                               );
             }
